--- a/index.html
+++ b/index.html
@@ -4,20 +4,40 @@
     <meta charset="UTF-8">
     <title>Golf Score Card</title>
     <link rel="stylesheet" href="stylesheets/styles.css">
-    <script src="javascript/code.js"></script>
+    <link rel="stylesheet" href="bootstrap-3.3.7-dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="bootstrap-3.3.7-dist/css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
+
+
 </head>
 <body>
 
 <div id="container">
-    <div id="opaque">
-
         <div id="container-inner">
+            <div id="courseSelect">
+                <p>Select a course:</p>
+                <select>
+                    <option>1</option>
+                    <option>2</option>
+                    <option>3</option>
+                    <option>4</option>
+                    <option>5</option>
+                    <option>6</option>
+                </select>
+                <button class="btn btn-info">Let's do this thing!</button>
+            </div>
+            <div id="scorecard">
+
+            </div>
 
         </div>
 
-    </div>
 
 </div>
 
+
+
+<script src="javascript/jquery-3.1.1.js"></script>
+<script src="javascript/code.js"></script>
 </body>
 </html>
